# saorsa-pqc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: benchmarks.yml  coverage.yml  cross-platform.yml  ct-verification.yml  docs.yml  lint.yml  linux-tests.yml  memory-safety.yml  msrv.yml  nist-vectors.yml  property-tests.yml  quick-check.yml  security-audit.yml  test.yml
benches/: ct_verification.rs
docs/fips/: README.md  SIDE_CHANNEL_PROTECTION.md  UPSTREAM_VERIFICATION.md
examples/: hkdf_key_derivation.rs
scripts/: generate_fips_evidence.sh
src/: lib.rs
src/api/: kem.rs  sig.rs  slh.rs  symmetric.rs
src/pqc/: constant_time.rs  ct_fips.rs  encryption.rs  fips_rng.rs  mod.rs
tests/: fips_rng_compliance.rs  hkdf_integration.rs  ml_dsa_tests.rs  nist_test_vectors.rs  pqc_traits_tests.rs  security_enhancement_tests.rs  security_tests.rs
