[package]
name = "saorsa-pqc"
version = "0.3.12"
edition = "2021"
authors = ["David Irvine <david@saorsalabs.com>"]
license = "MIT OR Apache-2.0"
description = "Post-Quantum Cryptography library for Saorsa Labs projects"
homepage = "https://github.com/dirvine/saorsa-pqc"
repository = "https://github.com/dirvine/saorsa-pqc"
documentation = "https://docs.rs/saorsa-pqc"
keywords = ["cryptography", "post-quantum", "ml-kem", "ml-dsa", "quic"]
categories = ["cryptography", "network-programming"]
readme = "README.md"
rust-version = "1.85.0"
exclude = ["tests/nist_vectors/*", "*.profraw", "scripts/*"]

[lib]
name = "saorsa_pqc"
path = "src/lib.rs"

[features]
# Core functionality - always enabled
default = [
    "simd"  # SIMD acceleration for performance
]

# Performance and optimization features
simd = ["dep:wide"]  # SIMD acceleration (requires wide crate)

# Optional development and testing features
cert_compression = []         # Certificate compression optimization
dangerous_configuration = []  # Only enable for specific use cases
test-utils = []               # Testing utilities
benchmarks = []               # Benchmarking support
fuzzing = []                  # Fuzzing tests (requires libfuzzer-sys)

[dependencies]
# NIST Post-Quantum Cryptography Standards
fips203 = { version = "0.4", features = ["default-rng"] }  # ML-KEM (Kyber)
fips204 = { version = "0.4", features = ["default-rng"] }  # ML-DSA (Dilithium)
fips205 = { version = "0.4", features = ["default-rng"] }  # SLH-DSA (SPHINCS+)


# Async and concurrency
tokio = { version = "1.35", features = ["rt", "net", "sync", "time", "macros"] }
futures = "0.3"

# Classical cryptography for hybrid modes
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Symmetric encryption (quantum-resistant)
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
aes-gcm = "0.10"
aead = "0.5"

# Key derivation and MAC
hkdf = "0.12.4"
hmac = "0.12"

# Hybrid Public Key Encryption (RFC 9180)
hpke = { version = "0.13", features = ["std"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Random and hash
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.8"

# Error handling and secure memory
thiserror = "2.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
libc = "0.2"

# Logging and tracing
tracing = "0.1"
log = "0.4"

# Networking
bytes = "1.5"

# Parallel processing (enabled by default)
rayon = { version = "1.8" }

# Time utilities
time = { version = "0.3", features = ["std", "formatting", "parsing"] }

# Constant-time operations (always available)
subtle = { version = "2.5" }

# SIMD acceleration for high-performance crypto
wide = { version = "0.7", optional = true }
rand_core = { version = "0.6.4", features = ["std", "getrandom"] }

[dev-dependencies]
# Existing dependencies
tokio-test = "0.4"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
hex = "0.4"
once_cell = "1.19"

# Additional test dependencies for comprehensive testing
serde_json = "1.0"
lazy_static = "1.4"
tempfile = "3.8"

# For performance profiling

# Additional test dependencies
slh-dsa = "0.0.3"  # Alternative SLH-DSA implementation for cross-validation

# Enhanced testing infrastructure
# Note: cargo-mutants is a binary tool and should be installed with: cargo install cargo-mutants
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
mutants = "0.0.3"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
honggfuzz = "0.5"
pprof = { version = "0.15", features = ["flamegraph"] }


# Test configuration for specific test suites
[[test]]
name = "ml_kem_tests"
path = "tests/ml_kem_tests.rs"

[[test]]
name = "ml_dsa_tests"
path = "tests/ml_dsa_tests.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"
required-features = ["test-utils"]


# Benchmarks
[[bench]]
name = "ml_kem_benchmarks"
path = "benches/ml_kem_benchmarks.rs"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "ml_dsa_benchmarks"
path = "benches/ml_dsa_benchmarks.rs"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "comprehensive_benchmarks"
path = "benches/comprehensive_benchmarks.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
debug = true
lto = true
codegen-units = 1

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Security audit settings
[package.metadata.audit]
ignore = []

# Clippy settings for ultra-quality standards
[package.metadata.clippy]
msrv = "1.85.0"

# Test coverage configuration
[package.metadata.tarpaulin]
ignore-config = true
exclude-files = [
    "tests/*",
    "benches/*",
    "examples/*"
]
out = ["Html", "Xml"]
output-dir = "target/tarpaulin"
timeout = 300

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
# Performance lints
inefficient_to_string = "warn"
large_enum_variant = "warn"
large_stack_arrays = "warn"
too_many_arguments = "warn"

# Correctness lints
indexing_slicing = "warn"
arithmetic_side_effects = "allow"
# Allow unwrap/expect in test code only (handled via #[cfg(test)] allows in code)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unimplemented = "warn"
todo = "warn"

# Style lints
enum_glob_use = "warn"
wildcard_imports = "warn"
redundant_closure = "allow"
redundant_field_names = "allow"

# Complexity lints
cognitive_complexity = "allow"

# Pedantic lints (relaxed for practical development)
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -2 }

# Allow certain pedantic lints that are too restrictive
similar_names = "allow"
const_is_empty = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "allow"
